[package]
name = "kupload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17", features = ["tracing", "http2", "macros"] }
derive_more = "0.99.17"
error-stack = "0.3.1"
http = "0.2.9"
hyper = "0.14.26"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["kube-client"] }
log4rs = "1.2.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "time", "rt-multi-thread"] }
